--- a/ASLRocketShipToSpace/app/templates/app/draganddropgame.html
+++ b/ASLRocketShipToSpace/app/templates/app/draganddropgame.html
@@ -3,20 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
     {% load static %}
-	<script src="{% static 'app/scripts/draganddrop.js' %}"></script>
+    <script src="{% static 'app/scripts/draganddrop.js' %}"></script>
+    <style>
+
+        body {
+            font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+            font-weight: 300;
+        }
+
+
+        #word {
+            text-align: center;
+            grid-row: 2 /3;
+        }
+
+        #prompt {
+            grid-row: 1 /2;
+            text-align: center;
+            font-style: italic;
+        }
+
+        body {
+            white-space: nowrap;
+            overflow: auto;
+            justify-content: center;
+        }
+
+        #game {
+            justify-content: center;
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto 40% 40% auto;
+        }
+
+        .box {
+            min-width: 400px;
+            width: fit-content;
+            min-height: 200px;
+            margin: auto;
+        }
+
+        #signBox {
+            grid-row: 4 / 5;
+            background-color: aliceblue;
+        }
+
+        #answer {
+            grid-row: 3 /4;
+            background-color: yellow;
+        }
+
+        img {
+            cursor: move;
+            padding: 1rem;
+            width: 128px;
+            height: 128px;
+        }
+
+        #submit {
+            margin: auto;
+            grid-row: 5/6;
+        }
+
+        .dragging {
+            opacity: 0.5;
+        }
+
+    </style>
 </head>
+
 <body>
-<p>Translate To Sign Language</p>
-<p id="word"></p>
-<div id="answer">
-
+<div id=game>
+    <p id="prompt">Translate To Sign Language</p>
+    <p id="word"></p>
+    <div id="answer" class="box"></div>
+    <div id="signBox" class="box"></div>
 </div>
-<div id="signBox">
 
-
-</div>
-<button id ="submit">Submit</button>
+<button id="submit">Submit</button>
 </body>
 </html>
