--- a/ASLRocketShipToSpace/app/templates/app/MCQgame.html
+++ b/ASLRocketShipToSpace/app/templates/app/MCQgame.html
@@ -1,26 +1,111 @@
 ﻿<!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Multiple Choice</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <style>
+        html {
+            height: 100%;
+        }
 
-  </head>
-  <body>
-      <h1>Multiple Choice Game</h1>
-      <div>
-          <h1 id="gameCounter">Game 1</h1>
-          <p>What letter is this?</p>
-          <img id="questionImage" src="/static/app/signs/letter_A.png">
-      </div>
+        body {
+            font-family: "poppins", sans-serif;
+            font-weight: 400;
+            background: rgb(221, 236, 251);
+            background: linear-gradient(27deg, rgba(221, 236, 251, 0.7861344366848302) 0%, rgba(0, 153, 255, 0.856162447889312) 45%, rgba(35, 11, 73, 0.8365546047520571) 100%);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
 
-      <div id="buttons">
-          <button value="Option1" id="optionOne">Option 1</button>
-          <button value="Option2" id="optionTwo">Option 2</button>
-          <button value="Option3" id="optionThree">Option 3</button>
-          <button value="Option4" id="optionFour">Option 4</button>
-      </div>
-  {% load static %}
-	<script src="{% static 'app/scripts/multiplechoice.js' %}"></script>
-  </body>
+
+        #prompt {
+            text-align: center;
+            font-size: 25px;
+        }
+
+
+        #game {
+            margin: 100px auto;
+            background: #f7f7f7;
+            box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 30px 10px;
+            border-radius: 30px;
+        }
+
+        .box {
+            overflow: auto;
+            min-width: 300px;
+            width: fit-content;
+            min-height: 200px;
+            margin: auto;
+            white-space: nowrap;
+        }
+
+        #signBox {
+            border-radius: 10px;
+        }
+
+        #answer {
+            padding-left: 100px;
+            padding-right: 100px;
+            background-color: lightgray;
+            border-radius: 10px;
+        }
+
+        img {
+            cursor: move;
+            padding: 1rem;
+            width: 256px;
+            height: 256px;
+        }
+
+        .buttonGroup {
+            margin: 60px 0 30px 0;
+        }
+
+        .buttonGroup button {
+            text-align: center;
+            text-decoration: none;
+            border: none;
+            padding: 30px 100px;
+            margin: 0 10px;
+            background-color: lightgray;
+            border-radius: 10px;
+            box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+            font-family: "poppins", sans-serif;
+            font-size: 25px;
+            font-weight: bold;
+        }
+
+        .buttonGroup button:hover {
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .buttonGroup button:focus {
+            outline: 0;
+
+        }
+
+
+    </style>
+</head>
+<body>
+<div id="game">
+    <div>
+        <img id="questionImage" src="/static/app/signs/letter_A.png">
+        <p id="prompt">What letter does this hand symbol represent?</p>
+    </div>
+    <div id="buttons" class="buttonGroup">
+        <button value="Option1" id="optionOne">Option 1</button>
+        <button value="Option2" id="optionTwo">Option 2</button>
+        <button value="Option3" id="optionThree">Option 3</button>
+        <button class="button" value="Option4" id="optionFour">Option 4</button>
+    </div>
+</div>
+{% load static %}
+<script src="{% static 'app/scripts/multiplechoice.js' %}"></script>
+</body>
 </html>
